[gd_scene load_steps=30 format=3 uid="uid://bcjmjkd0qgnok"]

[ext_resource type="Script" path="res://player.gd" id="1_wh2cd"]
[ext_resource type="Texture2D" uid="uid://6skxsei2jaak" path="res://sprites/walking_player.png" id="2_ya0tt"]
[ext_resource type="PackedScene" uid="uid://b0rct3o4hlgke" path="res://scenes/ui/vignette.tscn" id="3_ef81l"]
[ext_resource type="PackedScene" uid="uid://cacv685tn8dx5" path="res://scenes/manager/PowerUpManager.tscn" id="3_l2d8r"]
[ext_resource type="Texture2D" uid="uid://bpucx7emsmr6w" path="res://sprites/player.png" id="5_5vws1"]
[ext_resource type="PackedScene" uid="uid://g38lucl12bnx" path="res://scenes/components/health_component.tscn" id="5_aj802"]
[ext_resource type="Texture2D" uid="uid://bsdh6vobb4dcs" path="res://sprites/player_inverted.png" id="6_vnaes"]
[ext_resource type="PackedScene" uid="uid://d008ahfuqiv0d" path="res://scenes/ui/hud.tscn" id="7_kn4hl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_imtax"]
atlas = ExtResource("2_ya0tt")
region = Rect2(251, 424, 61, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_adiei"]
atlas = ExtResource("2_ya0tt")
region = Rect2(253, 424, 61, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_538lh"]
atlas = ExtResource("2_ya0tt")
region = Rect2(378, 424, 60, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_drxbd"]
atlas = ExtResource("2_ya0tt")
region = Rect2(314, 424, 61, 106)

[sub_resource type="SpriteFrames" id="SpriteFrames_3yia7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_imtax")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adiei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_538lh")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_drxbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adiei")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6p1ln"]
atlas = ExtResource("5_5vws1")
region = Rect2(0, 0, 62, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_21ob0"]
atlas = ExtResource("5_5vws1")
region = Rect2(0, 0, 62, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_87hcc"]
atlas = ExtResource("5_5vws1")
region = Rect2(128, 0, 61, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_21k03"]
atlas = ExtResource("6_vnaes")
region = Rect2(496, 0, 62, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv4a2"]
atlas = ExtResource("6_vnaes")
region = Rect2(372, 0, 62, 106)

[sub_resource type="SpriteFrames" id="SpriteFrames_gn0ha"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p1ln")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21ob0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87hcc")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21k03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv4a2")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kosuu"]
atlas = ExtResource("5_5vws1")
region = Rect2(248, 106, 62, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_77c56"]
atlas = ExtResource("5_5vws1")
region = Rect2(248, 106, 62, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_avwpb"]
atlas = ExtResource("5_5vws1")
region = Rect2(310, 106, 62, 106)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0rrg"]
atlas = ExtResource("5_5vws1")
region = Rect2(248, 106, 62, 106)

[sub_resource type="SpriteFrames" id="SpriteFrames_y731u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kosuu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_77c56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_538lh")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_avwpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0rrg")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3u1g"]

[sub_resource type="Animation" id="Animation_xlsby"]
length = 0.001

[sub_resource type="Animation" id="Animation_fsco0"]
resource_name = "punch"
length = 0.2

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oiwoy"]
_data = {
"RESET": SubResource("Animation_xlsby"),
"punch": SubResource("Animation_fsco0")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2wubg"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_wh2cd")

[node name="HUD" parent="." instance=ExtResource("7_kn4hl")]

[node name="Vignette" parent="." instance=ExtResource("3_ef81l")]
process_mode = 3

[node name="PowerUpManager" parent="." instance=ExtResource("3_l2d8r")]
unique_name_in_owner = true

[node name="HealthComponent" parent="." instance=ExtResource("5_aj802")]
max_health = 5.0

[node name="PowerUpControllers" type="Node2D" parent="." groups=["power_up_controllers"]]

[node name="Visuals" type="Node2D" parent="."]

[node name="AngryBodyAnimation" type="AnimatedSprite2D" parent="Visuals"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_3yia7")
offset = Vector2(0, -47)

[node name="NormalBodyAnimation" type="AnimatedSprite2D" parent="Visuals"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_gn0ha")
offset = Vector2(0, -47)

[node name="AberrationBodyAnimation" type="AnimatedSprite2D" parent="Visuals"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_y731u")
animation = &"walk_left"
offset = Vector2(0, -47)

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(1, -44)
scale = Vector2(2.23937, 3.99719)
shape = SubResource("RectangleShape2D_q3u1g")

[node name="AttackAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oiwoy")
}

[node name="EnemyHurtboxArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtboxArea"]
position = Vector2(1, -44)
scale = Vector2(1.76, 4.4)
shape = SubResource("CircleShape2D_2wubg")
